--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  height: 80px;
+}
+.nova-pay-logo {
+  width: 200px;
+  text-align: left;
+}
+.navigation-list {
+  display: flex;
+  list-style: none;
+}
+.above-the-fold-container {
+  background: linear-gradient(
+    149deg,
+    rgba(201, 146, 170, 1) 0%,
+    rgba(120, 156, 189, 1) 41%,
+    rgba(128, 198, 205, 1) 62%,
+    rgba(128, 201, 158, 1) 88%
+  );
+  color: white;
+  display: flex;
+  align-items: center;;
+  justify-content: center;
+  text-align: center;
+  padding: 60px 20px;
+}
+.above-the-fold-sub-container{
+  max-width: 600px;
+  margin: auto;
+}
+.home-description-text {
+  font-size: 24px;
+}
+.home-advantages-list {
+  list-style: none;
+  font-size: 20px;
+}
+.main-point {
+  font-weight: 600;
+  margin-right: 10px;
+}
+.main-point::after {
+  content: '-';
+  margin-left: 10px;
+}
+.home-advantages-list-item-text {
+  font-weight: 100;
+}
+.learn-more-container {
+  margin: 40px 0 0;
+}
+.learn-more-container a {
+  display: inline-flex;
+  background: white;
+  height: 50px;
+  align-items: center;
+  padding: 0 50px;
+  text-decoration: none;
+  color: #333;
+  border-radius: 5px;
+  font-weight: 500;
+}
+.features-list {
+  display: flex;
+  justify-content: center;
+}
+
+
