--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,11 @@ code {
   display: flex;
   list-style: none;
 }
+.navigation-list-item {
+  margin: 0 20px;
+  font-weight: bold;
+  color: #333;
+}
 .above-the-fold-container {
   background: linear-gradient(
     149deg,
@@ -43,15 +48,15 @@ code {
   padding: 60px 20px;
 }
 .above-the-fold-sub-container{
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
 }
 .home-description-text {
-  font-size: 24px;
+  font-size: 28px;
 }
 .home-advantages-list {
   list-style: none;
-  font-size: 20px;
+  font-size: 22px;
 }
 .main-point {
   font-weight: 600;
@@ -78,9 +83,72 @@ code {
   border-radius: 5px;
   font-weight: 500;
 }
+.below-the-fold-sub-container {
+  margin: 80px 0;
+}
 .features-list {
   display: flex;
   justify-content: center;
 }
-
-
+.features-list-item {
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+  margin: 0 30px;
+}
+.feature-main-point {
+  font-weight: 700;
+  font-size: 26px;
+}
+.feature-icon {
+  font-size: 60px;
+  color: blue;
+}
+.below-the-fold-sub-container-2 {
+  background: #245a88;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  flex-flow: column;
+  padding: 40px 20px;
+}
+.cta-title {
+  font-size: 32px;
+}
+.cta-text {
+  font-size: 24px;
+}
+.cta-button {
+  border-radius: 5px;
+  background: white;
+  padding: 0 20px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #333;
+  margin-top: 30px;
+}
+.cta-button .fa-angle-right {
+  margin-left: 10px;
+  font-weight: bold;
+}
+.footer-container {
+  background: #ddd;
+  padding: 30px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.copyright {
+  display: flex;
+  align-items: center;
+}
+.footer-navigation-list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+}
+.footer-navigation-list-item {
+  margin: 0 10px;
+}
