--- a/src/components/styles/SignIn.module.css
+++ b/src/components/styles/SignIn.module.css
@@ -6,7 +6,8 @@
 .signInContainer {
     width: 600px;
     max-width: 100%;
-    box-shadow: 1px 2px 2px 2px rgba(0,0,0,.3);
+    box-shadow: 1px 2px 2px 2px rgba(0,0,0,.3);    
+    align-self: center;
 }
 .tabContainer {
     background: #eee;
@@ -46,6 +47,7 @@
 .input {
     border: none;
     height: 60%;
+    width: 100%;
 }
 .input:focus-visible {
     outline: none;
