--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,12 @@ code {
 .hidden {
   display: none !important;
 }
-
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+}
 .header-container {
   display: flex;
   align-items: center;
