--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -26,6 +29,7 @@ code {
   justify-content: space-between;
   padding: 0 20px;
   height: 80px;
+  width: 100%;
 }
 .nova-pay-logo {
   width: 200px;
