--- a/src/components/styles/Merchant.module.css
+++ b/src/components/styles/Merchant.module.css
@@ -1,3 +1,9 @@
+.merchantWrapper {
+}
 .merchantContainer {
-    background: #eee;
+  background: #122759;
+}
+.merchantHeader {
+  max-width: 700px;
+  margin: auto;
 }
