--- a/src/components/styles/Documentation.module.css
+++ b/src/components/styles/Documentation.module.css
@@ -1,8 +1,61 @@
 .button {
     height: 50px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 0 30px;
-    border-radius: 20px;
+    border-radius: 30px;
+    background: rgba(255,255,255,0.3);
+    color: white;
+    transition: all 0.3s;
+    font-size: 20px;
+    margin: 20px 0 0;
+}
+.button:hover {
+    background: #ff6600;
+}
+.button:nth-child(2) {
+    margin-left: 40px;
+}
+.description {
+    font-size: 20px;
+}
+.dashboardBannerContainerContainer {
+    background: #16306e;
+    color: white;
+    padding: 60px 20px 100px;
+}
+.dashboardBannerContainer {
+    max-width: 600px;
+    margin: auto;
+}
+h3 {
+    font-size: 40px;
+}
+.contentContainer {
+    padding: 10px 20px 50px;
+}
+.content {
+    max-width: 600px;
+    margin: auto;
+}
+.sectionTitle {
+    font-size: 30px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    font-weight: bold;
+    margin-top: 40px;
+}
+.sectionContent {
+    margin-top: 20px;
+    line-height: 1.5;
+    font-size: 18px;
+}
+pre {
+    background: #333;
+    overflow: auto;
+    width: 600px;
+    padding: 20px;
+    border-left: #666 5px solid;
+    color: white;
 }
