--- a/src/components/styles/Merchant.module.css
+++ b/src/components/styles/Merchant.module.css
@@ -2,8 +2,69 @@
 }
 .merchantContainer {
   background: #122759;
+  padding: 20px;
+  color: white;
+  font-size: 19px;
 }
 .merchantHeader {
-  max-width: 700px;
+  max-width: 900px;
   margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+}
+
+.merchantLogo {
+  height: 100%;
+  margin-right: 30px;
+}
+.merchantLogo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.merchantNameSalesContainer {
+  margin-right: auto;
+  display: flex;
+  align-items: flex-start;
+  flex-flow: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.merchantSales {
+  margin-top: auto;
+}
+.transactionNumbers,
+.merchantSales {
+  font-weight: 100;
+  font-size: 17px;
+}
+.merchantSalesNumber,
+.transactionNumbersNumber {
+  font-weight: bold;
+  margin-left: 5px;
+}
+.transferReceiveContainer {
+  display: flex;
+}
+button {
+  border-radius: 5px;
+  border: none;
+  height: 50px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
+}
+.transferButton {
+  background: #4d59ed;
+}
+.receiveButton {
+  background: #159134;
 }
