--- a/src/components/styles/Merchant.module.css
+++ b/src/components/styles/Merchant.module.css
@@ -101,8 +101,14 @@ input {
   height: 30px;
   font-size: 18px;
   margin-top: 3px;
-  width: 200px;
+  width: 100%;
 }
 .transferInputContainer button {
-  background: green;
+  background: #4285f4;
+  margin-top: 20px;
+  width: 150px;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
 }
