--- a/src/components/styles/Dashboard.module.css
+++ b/src/components/styles/Dashboard.module.css
@@ -5,7 +5,7 @@
 .dashboardHeaderContainer {
   background: #122341;
 }
-.navigationListItem {
+.navigationListItem a {
   color: white;
 }
 .dashboardBannerContainer {
