--- a/src/components/styles/Merchant.module.css
+++ b/src/components/styles/Merchant.module.css
@@ -71,7 +71,7 @@ button {
 }
 .merchantTransferContainer {
   max-width: 600px;
-  margin: auto;
+  margin: 0 auto 50px;
 }
 .merchantTransfer {
   background: linear-gradient(-204deg, #122759, #628aca 170%);
